# customer-churn-

./: .gitignore  .vercelignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  VERCEL_DEPLOYMENT_STEPS.md  VERCEL_FIX_README.md  VERCEL_SETUP.md  run.sh  start.sh  vercel.json
api/: index.py
backend/: .vercelignore  build.sh  main.py  pyproject.toml  requirements.txt  train_model.py  vercel.json
frontend/: .vercelignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: About.css  About.js  Overview.css  Overview.js  PredictChurn.css  PredictChurn.js
frontend/src/smart campus complaint management system/: COMPLETION_SUMMARY.md  DELIVERY_CONFIRMATION.md  DEMO_GUIDE.md  INDEX.md  QUICK_REFERENCE.md  README.md  START_HERE.md  package.json
frontend/src/smart campus complaint management system/demo-app/: package-lock.json
frontend/src/smart campus complaint management system/docs/: MERN_SETUP.md
frontend/src/smart campus complaint management system/examples/: Ex2a_StatefulClassComponent.jsx  Ex2b_StatelessFunctionalComponent.jsx  Ex3a_UseStateUseEffect.jsx  Ex3b_AdvancedHooks.jsx
