[project]
name = "customer-churn-api"
version = "1.0.0"
description = "Customer Churn Prediction API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
]

[tool.pip]
compile = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
